--- a/ComponentEdit2/ComponentEdit2.csproj
+++ b/ComponentEdit2/ComponentEdit2.csproj
@@ -45,6 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Attdisp.cs" />
     <Compile Include="Canvas.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -52,8 +53,17 @@
     <Compile Include="Command\Command.cs" />
     <Compile Include="Command\CommandManager.cs" />
     <Compile Include="Command\CreatComponentCmd.cs" />
-    <Compile Include="DragToolStrategy.cs" />
+    <Compile Include="Command\RemoveComponentCmd.cs" />
+    <Compile Include="Command\CreatInterfaceCmd.cs" />
+    <Compile Include="ComponentTemplate.cs" />
     <Compile Include="ElementManager.cs" />
+    <Compile Include="Element\Network.cs" />
+    <Compile Include="Form2.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form2.Designer.cs">
+      <DependentUpon>Form2.cs</DependentUpon>
+    </Compile>
     <Compile Include="Grid\DotGridStrategy.cs" />
     <Compile Include="Element\Component.cs" />
     <Compile Include="Element\Element.cs" />
@@ -67,18 +77,27 @@
     <Compile Include="Grid\GridContext.cs" />
     <Compile Include="Grid\GridStrategy.cs" />
     <Compile Include="Kernel.cs" />
-    <Compile Include="Element\Link.cs" />
     <Compile Include="Grid\LineGridStrategy.cs" />
     <Compile Include="Grid\NullGridStrategy.cs" />
     <Compile Include="LibraryRead.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Property.cs" />
-    <Compile Include="SelectToolStrategy.cs" />
-    <Compile Include="ToolContext.cs" />
-    <Compile Include="ToolStrategy.cs" />
+    <Compile Include="PropertyItem.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="PropertyItem.Designer.cs">
+      <DependentUpon>PropertyItem.cs</DependentUpon>
+    </Compile>
+    <Compile Include="SerializeHelper.cs" />
+    <EmbeddedResource Include="Canvas.resx">
+      <DependentUpon>Canvas.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form2.resx">
+      <DependentUpon>Form2.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -90,6 +109,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="PropertyItem.resx">
+      <DependentUpon>PropertyItem.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -156,6 +178,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Erase.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\关闭.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
